# Gptrip

./: .dockerignore  .gitignore  Dockerfile  fly.toml  image_embedding.ipynb  make_emotional_statement.ipynb  pyproject.toml  requirements.txt  start.sh  text_embedding_test.ipynb
app/: README.md  config.py  containers.py  main.py  qdrant_database.py
app/model/: prompt.py  response.py
app/place/application/: recommend_service.py
app/place/domain/: place.py
app/place/domain/repository/: qdrant_repo.py
app/place/infra/embedder/: image_embedder.py  text_embedder.py
app/place/infra/repository/: qdrant_repo.py
app/place/interface/controller/: recommend_controller.py
app/place_recommend/application/: recommend_service.py
app/place_recommend/domain/: place.py
app/place_recommend/domain/repository/: qdrant_repo.py
app/place_recommend/infra/repository/: qdrant_repo.py
app/tests/infra/: test_qdrant_connection.py
app/tests/infra/repository/: qdrant_repo_test.py
app/utills/: db_utils.py  fuse_results.py
data_tools/: check_vector.py  fetch_image_by_contentId.py  places_with_overview.py  tourapi_fetcher.py  upload_qdrant_Embedding.py
embedding_tools/: embed_text_from_place_inform.py  for_first_start_nltk.py  image_embedding.ipynb  sample_code.py
