[tool.poetry]
name = "gptrip"
version = "0.1.0"
description = "Photo and LLM based travel recommendation platform backend"
authors = ["Jungkihong07 <hnn07185@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.1.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
